# wwwurf-project-generator

./: .gitignore  README.md  h.sh  pyproject.toml
.github/workflows/: ci.yml
tests/: test_project_manager.py
wwwurf_project_generator/: __init__.py  cli.py  project_manager.py
