[tool.poetry]
name = "wwwurf-project-generator"
version = "0.1.0"
description = "A tool for generating multi-package Python projects"
authors = ["WorldWideWurf <worldwidewurf@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://worldwidewurf.io"
repository = "https://github.com/worldwidewurf-io/wwwurf-project-generator"
keywords = ["project", "generator", "poetry", "package"]
packages = [
    { include = "wwwurf_project_generator" }
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
wwwurf-gen = "wwwurf_project_generator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"