[tool.poetry]
name = "wwwurf-project-generator"
version = "0.1.0"
description = "A tool for generating multi-package Python projects"
authors = ["WorldWideWurf <worldwidewurf@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://worldwidewurf.io"
repository = "https://github.com/worldwidewurf-io/wwwurf-project-generator"
keywords = ["project", "generator", "poetry", "package"]
packages = [
    { include = "wwwurf_project_generator" }
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
wwwurf-gen = "wwwurf_project_generator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = [".git", "venv", ".venv", "build", "dist"]
known_first_party = ["wwwurf_project_generator"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]